css/styles.css
*{
    font-family:'Roboto Mono', monospace;
    text-align: center;
}
   

#myBody{
    width: 100%;
    height: 100vh;
    color: #fff;
    background: linear-gradient(45deg, #EE7752, #E74C7E, #23A6D5, #23D5AB);
    background-size: 400% 400%;
    position: relative;
    animation: gradientone 10s ease-in-out infinite;
}

h1 {
    color: rgb(212, 161, 66);
} 
h1:hover {
    color: rgb(52, 93, 206);
} 



#baller-img{
    border-width: 20px;
    border-color: #237CE2;
    border-style: solid;
    border-radius: 30px;
    margin-bottom: 70px;
}  

#baller-img:hover{
    border-width: 20px;
    border-color: #d4a040;
    border-style: solid;
    border-radius: 30px;
}

#cases-box{
    margin-top: 65px;
}

#case-img{
   width: 8%;
    
}

#case-click{
    cursor:pointer;  
}

.cases-text{
    color: #F9ED6A;
    background-color: rgba(0, 0, 0, 0.185);
    font-weight: bold;
}

#cases-text-big{
    font-size: 1.5em;
}

#cases-box:hover .cases-text{
    color: #DCD51F;
    background-color: black;
}

#streak{
    margin-top: 70px;
}

#twitter-icon:hover{
    fill: #237EE1;
    cursor: crosshair;
}

/*BottleSpin*/
#bottle-box{
    margin-top: 60px;
}

#bottle-headline{
    font-size: 1.2em;
    margin-bottom: 15px;
    font-weight: bold; 
}

#bottle-spin{
    margin-top: 25px;
}


/*Calculator*/
#calculator-box{
   border-radius: 30px;
   padding: 20px;
   margin-top: 60px;   
}
#calculator-box:hover{
        background-color:#237CE2;
        border-radius: 30px;
        color: white;
}

#calculator-headline{
    font-size: 1.5em;
    margin-bottom: 15px;
    font-weight: bold;
}

#button-box{
    font-size: 1.5em;
    margin-top: 10px;
}


@keyframes fadeout {
    0% {opacity: 1};
    100% {opacity: 0};
}

.fadeout{
    animation-name: fadeout;
    animation-duration: 3s;
    opacity: 0;  
}


@keyframes gradientone {
    0%{
        background-position: 0 50%;

    }
    50%{
        background-position: 100% 50%;
        
    }
    100%{
        background-position: 0 50%;
        
    }
}

